istio/gateway.yaml
# Istio Gateway for thndr-api
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: thndr-gateway
  namespace: thndr-app
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
